--- a/Minggu6/index.html
+++ b/Minggu6/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="index">
+    <meta name="description" content="webside 1 - index">
     <meta name="keywords" content="HTML, CSS">
     <meta name="author" content="Leonardo">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
